--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
-    "vue-browser-geolocation": "^1.8.0"
+    "vue-browser-geolocation": "^1.8.0",
+    "vue-property-decorator": "^8.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-plugin-pwa": "^4.2.3",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
