--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "element-ui": "^2.13.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
-    "vue-browser-geolocation": "^1.8.0"
+    "vue-browser-geolocation": "^1.8.0",
+    "vue-property-decorator": "^8.4.1",
+    "vue-pwa-install": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
