--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,22 @@
 {
-  "name": "mask-query-system",
-  "short_name": "maskQuery",
-  "theme_color": "#2196f3",
-  "background_color": "#2196f3",
+  "short_name": "Weather",
+  "name": "Weather: Do I need an umbrella?",
+  "description": "Weather forecast information",
+  "icons": [
+    {
+      "src": "/images/icons-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/images/icons-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": "/?source=pwa",
+  "background_color": "#3367D6",
   "display": "standalone",
-  "Scope": "/",
-  "start_url": "/https://genius9450.github.io/mask-query-system/",
-  "icons": null,
-  "splash_pages": null
+  "scope": "/",
+  "theme_color": "#3367D6"
 }
